--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Mine
+/not_for_git/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -127,3 +130,4 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+/not_for_git/
